# AnsFlow

./: .env.example  .env.logging.example  .env.logging.production  .env.prod.example  .gitignore  ADVANCED_WORKFLOW_COMPLETION_REPORT.md  ANSIBLE_PIPELINE_INTEGRATION_COMPLETE.md  ARCHIVE_REPORT_2025_07_14.md  BACKEND_ADVANCED_WORKFLOW_IMPLEMENTATION_REPORT.md  CHANGELOG_GIT_CREDENTIALS.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DJANGO_API_FIX_COMPLETION_REPORT.md  Dockerfile.webhook  EXECUTION_MODE_FIX_REPORT.md  FRONTEND_EXECUTION_DETAIL_FIX.md  GIT_CREDENTIAL_FEATURE_DEMO.md  JENKINS_JOBS_FIX_REPORT.md  KUBERNETES_COMPLETION_REPORT.md  LICENSE  LOGS_FIX_SUMMARY.md  Makefile  PIPELINE_CICD_EXECUTION_FIX_REPORT.md  PROJECT_ARCHIVE_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SETTINGS_QUICK_START.md  STEP_TYPE_MAPPING_FIX_REPORT.md  TODOLIST_UPDATE_SUMMARY.md  debug_parallel_group_save.py  demo_logging_system.py  diagnose_auth_system.py  diagnose_docker_pull_params.py  diagnose_parallel_group_issue.py  docker-compose.prod.yml  docker-compose.yml  docker_tag_fix_demo.py  final_logs_fix_verification.py  (+22 more)
backend/django_service/: .env.example  ANSIBLE_CREDENTIAL_ANALYSIS.md  ANSIBLE_PIPELINE_LOG_FIX_REPORT.md  ATOMIC_STEP_EXECUTION_REPORT.md  PIPELINE_070401_FIX_ANALYSIS.md  PIPELINE_PREVIEW_CONSISTENCY_FIX_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  celery_logging_integration.py  clean_duplicate_steps.py  clean_parallel_group_data.py  create_admin.py  create_frontend_test_data.py  create_test_user.py  debug_500_error.py  debug_pipeline_parallel.py  demo_command_usage.py  demo_workspace_feature.py  diagnose_log_consistency.py  docker_integration_report_20250718_033126.json  docker_integration_report_20250718_033602.json  docker_integration_report_20250718_040610.json  docker_integration_report_20250718_041804.json  docker_integration_report_20250718_043640.json  docker_integration_report_20250718_045518.json  docker_integration_report_20250718_050024.json  docker_integration_report_20250718_050107.json  docker_integration_report_20250718_052554.json  docker_integration_report_20250718_053147.json  executions_compat_urls.py  final_api_verification.py  final_fix_verification.py  final_verification.py  fix_execution_27.py  get_token.py  kubectl  manage.py  pipeline_demo.txt  pyproject.toml  simple_api_test.py  (+29 more)
backend/django_service/analytics/: urls.py  views.py
backend/django_service/ansflow/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/django_service/ansible_integration/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/django_service/audit/: urls.py
backend/django_service/cicd_integrations/: JENKINS_VIEWS_SPLIT_COMPLETION_REPORT.md  adapters.py  adapters_legacy.py  adapters_old.py  admin.py  apps.py  final_status_check.py  git_credential_tester.py  models.py  serializers.py  services.py  tasks.py  test_executors.py  test_views_split.py  urls.py  views.py  views_backup.py
backend/django_service/common/: LOG_REFACTOR_SUMMARY.md  consumers.py  django_logging_config.py  docker_executor_example.py  execution_logger.py  execution_logger_refactor_plan.md  execution_logger_usage.md  logging_config.py  middleware.py  prometheus_metrics.py  redis_logging.py  refactor_checker.py  routing.py  websocket_logging.py
backend/django_service/docker_integration/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/django_service/examples/: cache_usage_examples.py
backend/django_service/kubernetes_integration/: k8s_client.py  models.py  serializers.py  tasks.py  token_manager.py  urls.py  views.py
backend/django_service/logging_system/: __init__.py  apps.py  models.py
backend/django_service/monitoring/: __init__.py  apps.py  health.py  integration.py  prometheus.py  urls.py
backend/django_service/pipelines/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/django_service/project_management/: models.py  serializers.py  urls.py  views.py
backend/fastapi_service/: FASTAPI_SERVICE_COMPLETION_REPORT.md  analyze_log_flow.py  check_redis_logs.py  clear_log_files.py  clear_redis_logs.py  fastapi_logging_config.py  logging_integration.py  merge_redis_streams.py  pyproject.toml  redis_config_comparison.py  redis_stream_monitor.py  redis_switching_demo.py  solution2_report.md  standalone_logging.py  test_execution_websocket.py  test_frontend_auto_scroll.py  test_modular_updates.py  test_realtime_logs.py  test_slow_log_scroll.py  test_websocket.py
(+836 files in other folders)
